--- a/notes/KK396.md
+++ b/notes/KK396.md
@@ -55,17 +55,17 @@ Bifurcated = slit in the middle of the contact
 Obsolete / End of life
 Some are still stocked on Digikey and the likes
 
-Part nb          Old               AWG     Pack  Material Finish
------------------------------------------------------------------------------
-08-50-0115       2878-A-A(P909)B   18-20   Reel  Brass              Tin (Sn)
-08-50-0116       2878-A-A(P909)L   18-20   Bag   Brass              Tin (Sn)
-08-52-0126       2878-B-A(P909)B   18-20   Reel  Phosphore Bronze   Tin (Sn)
-08-52-0127       2878-B-A(P909)L   18-20   Bag   Phosphore Bronze   Tin (Sn)
-08-55-0138       2878-A-B(555)B    18-20   Reel  Brass              0.38µm Selective Gold (Au)
-08-58-0127       2878-B-A(550)B    18-20   Reel  Phosphore Bronze       
-08-58-0128       2878-B-A(550)L    18-20   Bag   Phosphore Bronze      
-08-65-0118       2878-B-A(555)B    18-20   Reel  Phosphore Bronze   0.38µm Selective Gold (Au)
-08-65-0119       2878-B-A(555)L    18-20   Bag   Phosphore Bronze   0.38µm Selective Gold (Au)
+| Part nb    | Old             | AWG   | Pack | Material Finish                             |
+| ---------- | --------------- | ----- | ---- | ------------------------------------------- |
+| 08-50-0115 | 2878-A-A(P909)B | 18-20 | Reel | Brass Tin (Sn)                              |
+| 08-50-0116 | 2878-A-A(P909)L | 18-20 | Bag  | Brass Tin (Sn)                              |
+| 08-52-0126 | 2878-B-A(P909)B | 18-20 | Reel | Phosphore Bronze Tin (Sn)                   |
+| 08-52-0127 | 2878-B-A(P909)L | 18-20 | Bag  | Phosphore Bronze Tin (Sn)                   |
+| 08-55-0138 | 2878-A-B(555)B  | 18-20 | Reel | Brass 0.38µm Selective Gold (Au)            |
+| 08-58-0127 | 2878-B-A(550)B  | 18-20 | Reel | Phosphore Bronze                            |
+| 08-58-0128 | 2878-B-A(550)L  | 18-20 | Bag  | Phosphore Bronze                            |
+| 08-65-0118 | 2878-B-A(555)B  | 18-20 | Reel | Phosphore Bronze 0.38µm Selective Gold (Au) |
+| 08-65-0119 | 2878-B-A(555)L  | 18-20 | Bag  | Phosphore Bronze 0.38µm Selective Gold (Au) |
 
 ## 6838
 
@@ -82,16 +82,16 @@ KK Trifurcon Crimp
 They have 2 little prongs between crimp and contact, not sure why.
 -> They're called an anti-fish hooking feature, as described in the crimping tool manual
 
-Part nb          Old              AWG        Pack  Finish
------------------------------------------------------------------------------
-08-50-0008       8818-(P909)      18-22      Reel  Brass Tin (Sn)
-08-50-0023       8818-(P909)L     18-22      Bag   Brass Tin (Sn)
-08-52-0131       8818-A(P909)     18-22      Reel  Phosphor Bronze Tin (Sn)
-08-52-0132       8818-A(P909)L    18-22      Bag   Phosphor Bronze Tin (Sn)
-08-58-0135       8818-A(550)      18-22      Reel  Phosphor Bronze Selective Gold (Au)
-08-58-0136       8818-A(550)L     18-22      Bag   Phosphor Bronze Selective Gold (Au)
-08-65-0128       8818-A(555)      18-22      Reel  Phosphor Bronze Selective Gold (Au)
-08-65-0129       8818-A(555)L     18-22      Bag   Phosphor Bronze Selective Gold (Au)
+| Part nb    | Old           | AWG   | Pack | Finish                              |
+| ---------- | ------------- | ----- | ---- | ----------------------------------- |
+| 08-50-0008 | 8818-(P909)   | 18-22 | Reel | Brass Tin (Sn)                      |
+| 08-50-0023 | 8818-(P909)L  | 18-22 | Bag  | Brass Tin (Sn)                      |
+| 08-52-0131 | 8818-A(P909)  | 18-22 | Reel | Phosphor Bronze Tin (Sn)            |
+| 08-52-0132 | 8818-A(P909)L | 18-22 | Bag  | Phosphor Bronze Tin (Sn)            |
+| 08-58-0135 | 8818-A(550)   | 18-22 | Reel | Phosphor Bronze Selective Gold (Au) |
+| 08-58-0136 | 8818-A(550)L  | 18-22 | Bag  | Phosphor Bronze Selective Gold (Au) |
+| 08-65-0128 | 8818-A(555)   | 18-22 | Reel | Phosphor Bronze Selective Gold (Au) |
+| 08-65-0129 | 8818-A(555)L  | 18-22 | Bag  | Phosphor Bronze Selective Gold (Au) |
 
 Difference between the last two is probably coating thickness
 
@@ -108,37 +108,37 @@ Not exhaustive, just a reference for the one I own.
 
 Officially supported connectors
 
-Series  Part Nb      AWG
--------------------------------------------------------------------------------
-2478    08-50-0105   18-24   Reel, Brass Tin (Sn)
-2478    08-50-0106   18-24   Bag, Brass Tin (Sn)
-2478    08-52-0071   18-24   Reel, Phosphor Bronze, Tin (Sn)
-2478    08-52-0072   18-24   Bag, Phosphor Bronze, Tin (Sn)
-2478    08-55-0103   18-24   Reel, Brass, 0.38µm Selective Gold (Au)
-2478    08-55-0104   18-24   Bag, Brass, 0.38µm Selective Gold (Au)
-2478    08-56-0105   18-24   Reel, Brass, 0.51µm Selective Gold (Au)
-2478    08-56-0106   18-24   Bag, Brass, 0.51µm Selective Gold (Au)
-2478    08-58-0121   18-24   Reel, Phosphor Bronze, 0.51µm Selective Gold (Au)
-2478    08-58-0122   18-24   Bag, Phosphor Bronze, 0.51µm Selective Gold (Au)
-2478    08-65-0114   18-24   Reel, Phosphor Bronze, 0.38µm Selective Gold (Au)
-2478    08-65-0115   18-24   Bag, Phosphor Bronze, 0.38µm Selective Gold (Au)
-
-2578    08-50-0107   22-26   Reel, Brass, 2.540µm Tin (Sn)
-2578    08-50-0108   22-26   Bag, Brass, 2.540µm Tin (Sn)
-2578    08-50-0133   22-26   Reel, Phosphor Bronze, 2.540µm Tin (Sn)
-2578    08-50-0134   22-26   Bag, Phosphor Bronze, 2.540µm Tin(Sn)
-2578    08-55-0105   22-26   Reel, Brass, 0.38µm Selective Gold (Au)
-2578    08-55-0106   22-26   Bag, Brass, 0.38µm Selective Gold(Au)
-2578    08-56-0107   22-26   Reel, Brass, 0.51µm Select Gold (Au) over Gold Flash
-2578    08-56-0108   22-26   Bag, Brass, 0.51µm Select Gold (Au) over Gold Flash
-2578    08-58-0125   22-26   Reel, Phosphor Bronze, 0.51µm Selective Gold (Au)
-2578    08-58-0126   22-26   Bag, Phosphor Bronze, 0.51µm Selective Gold (Au)
-2578    08-65-0116   22-26   Reel, Phosphor Bronze, 0.38µm Selective Gold (Au)
-2578    08-65-0117   22-26   Bag, Phosphor Bronze, 0.38µm Selective Gold (Au)
-
-2878    08-50-0115   18-20   Reel, Brass, Tin (Sn), Bifurcated
-2878    08-50-0116   18-20   Bag, Brass, Tin (Sn), Bifurcated
-2878    08-65-0118   18-20   Reel, Phosphor Bronze, 0.38µm Selective Gold (Au), Bifurcated
+| Series | Part Nb    | AWG   | Pack | Finish                                         |
+| ------ | -----------| ----- | ---- | ---------------------------------------------- |
+| 2478   | 08-50-0105 | 18-24 | Reel | Brass Tin (Sn)                                 |
+| 2478   | 08-50-0106 | 18-24 | Bag  | Brass Tin (Sn)                                 |
+| 2478   | 08-52-0071 | 18-24 | Reel | Phosphor Bronze, Tin (Sn)                      |
+| 2478   | 08-52-0072 | 18-24 | Bag  | Phosphor Bronze, Tin (Sn)                      |
+| 2478   | 08-55-0103 | 18-24 | Reel | Brass, 0.38µm Selective Gold (Au)              |
+| 2478   | 08-55-0104 | 18-24 | Bag  | Brass, 0.38µm Selective Gold (Au)              |
+| 2478   | 08-56-0105 | 18-24 | Reel | Brass, 0.51µm Selective Gold (Au)              |
+| 2478   | 08-56-0106 | 18-24 | Bag  | Brass, 0.51µm Selective Gold (Au)              |
+| 2478   | 08-58-0121 | 18-24 | Reel | Phosphor Bronze, 0.51µm Selective Gold (Au)    |
+| 2478   | 08-58-0122 | 18-24 | Bag  | Phosphor Bronze, 0.51µm Selective Gold (Au)    |
+| 2478   | 08-65-0114 | 18-24 | Reel | Phosphor Bronze, 0.38µm Selective Gold (Au)    |
+| 2478   | 08-65-0115 | 18-24 | Bag  | Phosphor Bronze, 0.38µm Selective Gold (Au)    |
+| ------ | -----------| ----- | ---- | ---------------------------------------------- |
+| 2578   | 08-50-0107 | 22-26 | Reel | Brass, 2.540µm Tin (Sn)                        |
+| 2578   | 08-50-0108 | 22-26 | Bag  | Brass, 2.540µm Tin (Sn)                        |
+| 2578   | 08-50-0133 | 22-26 | Reel | Phosphor Bronze, 2.540µm Tin (Sn)              |
+| 2578   | 08-50-0134 | 22-26 | Bag  | Phosphor Bronze, 2.540µm Tin(Sn)               |
+| 2578   | 08-55-0105 | 22-26 | Reel | Brass, 0.38µm Selective Gold (Au)              |
+| 2578   | 08-55-0106 | 22-26 | Bag  | Brass, 0.38µm Selective Gold(Au)               |
+| 2578   | 08-56-0107 | 22-26 | Reel | Brass, 0.51µm Select Gold (Au) over Gold Flash |
+| 2578   | 08-56-0108 | 22-26 | Bag  | Brass, 0.51µm Select Gold (Au) over Gold Flash |
+| 2578   | 08-58-0125 | 22-26 | Reel | Phosphor Bronze, 0.51µm Selective Gold (Au)    |
+| 2578   | 08-58-0126 | 22-26 | Bag  | Phosphor Bronze, 0.51µm Selective Gold (Au)    |
+| 2578   | 08-65-0116 | 22-26 | Reel | Phosphor Bronze, 0.38µm Selective Gold (Au)    |
+| 2578   | 08-65-0117 | 22-26 | Bag  | Phosphor Bronze, 0.38µm Selective Gold (Au)    |
+| ------ | -----------| ----- | ---- | ---------------------------------------------- |
+| 2878   | 08-50-0115 | 18-20 | Reel | Brass, Tin (Sn),                               |
+| 2878   | 08-50-0116 | 18-20 | Bag  | Brass, Tin (Sn),                               |
+| 2878   | 08-65-0118 | 18-20 | Reel | Phosphor Bronze, 0.38µm Selective Gold (Au),   |
 
 
 # Other Brands
